Change positioning to avoid horizontal scroll

--- a/src/sass/layout/_filters.scss
+++ b/src/sass/layout/_filters.scss
@@ -29,11 +29,11 @@
     box-shadow: $filters-box-shadow;
     transition: background $animation-duration $timing-function,
       color $animation-duration $timing-function;
-    @media screen and (min-width: 768px) {
-      width: 100px;
+    @media screen and (min-width: $tablet) {
+      width: 110px;
+      // width: 100px;
     }
-    @media screen and (min-width: 1024px) {
-      width: 100px;
+    @media screen and (min-width: $desktop) {
       font-size: 12px;
     }
   }
@@ -116,18 +116,19 @@
     display: block;
     transform: translateX(0%);
     opacity: 1;
+    pointer-events: visible;
   }
 
   &:hover .values--genres {
-    width: 200px;
+    width: 190px;
     display: flex;
     flex-wrap: wrap;
 
     @media screen and (min-width: $tablet) {
-      width: 500px;
+      width: 400px;
     }
     @media screen and (min-width: $desktop) {
-      width: 600px;
+      width: 530px;
     }
   }
 }
@@ -136,13 +137,14 @@
   overflow-x: hidden;
   opacity: 0;
   position: absolute;
+  pointer-events: none;
   left: 100%;
   transform: translateX(50%);
   transition: opacity $animation-duration $timing-function,
     transform $animation-duration $timing-function;
 
   @media screen and (min-width: $tablet) {
-    transform: translateX(400%);
+    transform: translateX(200%);
   }
 
   &__form {
